--- a/Source/RiceConsole/RiceConsole.csproj
+++ b/Source/RiceConsole/RiceConsole.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
+    <PackageReference Include="Unity.Microsoft.DependencyInjection" Version="5.11.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Rice.Core">
       <HintPath>..\..\Dependencies\Rice\Rice.Core\Rice.Core.dll</HintPath>
     </Reference>
