--- a/Source/RiceConsole/RiceConsole.csproj
+++ b/Source/RiceConsole/RiceConsole.csproj
@@ -10,12 +10,16 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
+    <PackageReference Include="Unity.Abstractions" Version="5.11.3" />
     <PackageReference Include="Unity.Microsoft.DependencyInjection" Version="5.11.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Rice.Core">
-      <HintPath>..\..\Dependencies\Rice\Rice.Core\Rice.Core.dll</HintPath>
+    <Reference Include="Rice.Core.Abstractions">
+      <HintPath>..\..\Dependencies\Rice\Rice.Core.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Rice.Core.Unity">
+      <HintPath>..\..\Dependencies\Rice\Rice.Core.Unity.dll</HintPath>
     </Reference>
   </ItemGroup>
 
