--- a/Source/RiceConsoleClient/RiceConsoleClient.csproj
+++ b/Source/RiceConsoleClient/RiceConsoleClient.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
