--- a/Source/RiceConsoleClient/RiceConsoleClient.csproj
+++ b/Source/RiceConsoleClient/RiceConsoleClient.csproj
@@ -9,15 +9,14 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Rice.Core.Serialize.ProtoBuf" Version="1.0.1" />
+    <PackageReference Include="Rice.Core.Unity" Version="1.0.1" />
     <PackageReference Include="Unity" Version="5.11.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Rice.Core.Abstractions">
-      <HintPath>..\..\Dependencies\Rice\Rice.Core.Abstractions.dll</HintPath>
-    </Reference>
-    <Reference Include="Rice.Core.Unity">
-      <HintPath>..\..\Dependencies\Rice\Rice.Core.Unity.dll</HintPath>
+    <Reference Include="Rice.Module.Abstractions">
+      <HintPath>..\..\Dependencies\Rice\Rice.Module.Abstractions.dll</HintPath>
     </Reference>
   </ItemGroup>
 
